--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -14,6 +14,9 @@
             <h2>Top Comfort Yogui® + Brinde Exclusivo</h2>
         </div>
     </header>
+    <section id="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn" frameborder="0" allowfullscreen></iframe>
+    </section>
     <section id="intro"> 
         <div class="container"> <!-- (1) Introduction of what is being offered -->
             <BR>
