--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -10,7 +10,7 @@
 <body>
     <header> <!-- (1) Cabeçalho / Título / Menu -->
         <div class="container-v0">
-            <h1>Chinelo Ortopédico <BR>Top Comfort</h1><h2>Ⓡ</h2>
+            <h1>LANÇAMENTO EXCLUSIVO: TOP COMFORT<br>ESTILO E CONFORTO</h1>
         </div>
     </header>
     <section id="home">
@@ -18,16 +18,14 @@
         <img src="12.png" alt="Descrição da Imagem" width="600px" height="500px">
         </div>
         <div class="caracteristicas">
-            <h2>Características</h2>
-            <ul>
-                <li><i class="item"></i>Material EVA Ultra Leve e Resistente</li>
-                <li><i class="item"></i>Solado: Antiderrapante</li>
-                <li><i class="item"></i>Altura do Solado: 5 centímetros</li>
-                <li><i class="item"></i>Indicado para:  Conforto; Dores; Desconforto ao Caminhar.</li>
-                <li><i class="item"></i>Indicado para: Pessoas que Passam Muito Tempo em Pé</li>
-                <li><i class="item"></i>Design moderno</li>
-                <li><i class="item"></i>Alta segurança</li>
-            </ul>
+            <h2>Chinelo Top Comfort</h2>
+                    <p><img src="https://www.flaticon.com/br/icones-gratis/estrela" alt="estrela">Material EVA Ultra Leve e Resistente</p>
+                    <p>Solado: Antiderrapante</p>
+                    <p>Altura do Solado: 5 centímetros</p>
+                    <p>Indicado para:  Conforto; Dores; Desconforto ao Caminhar.</p>
+                    <p>Indicado para: Pessoas que Passam Muito Tempo em Pé</p>
+                    <p>Design moderno</p>
+                    <p>Alta segurança</p>
         </div>
     </section>
     <section id="video">
