--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -19,13 +19,13 @@
         </div>
         <div class="caracteristicas">
             <h2>Chinelo Top Comfort</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Material EVA ultra leve e resistente</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Solado: antiderrapante</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Altura do solado: 5 centímetros</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Indicado para: conforto, dores, desconforto ao caminhar.</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Indicado para: pessoas que passam muito tempo em pé</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Design moderno</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Alta segurança</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Material EVA ultra leve e resistente</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Solado: antiderrapante</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Altura do solado: 5 centímetros</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Indicado para: conforto, dores, desconforto ao caminhar</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Indicado para: pessoas que passam muito tempo em pé</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Design moderno</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Alta segurança</p>
             <a href="#" class="btn">COMPRAR</a> 
     </section>
     <section id="video">
@@ -47,22 +47,14 @@
             <a href="#" class="btn">COMPRAR</a> 
         </div>
     </section>
-    <section id="features"> <!-- (3) Características do produto/serviço-->
-        <div class="container">
-            <h2>Recursos Principais</h2>
-            <div class="feature-item">
-                <h3>Feature 1</h3>
-                <p>Descrição do primeiro recurso.</p>
-            </div>
-            <div class="feature-item">
-                <h3>Feature 2</h3>
-                <p>Descrição do segundo recurso.</p>
-            </div>
-            <div class="feature-item">
-                <h3>Feature 3</h3>
-                <p>Descrição do terceiro recurso.</p>
-            </div>
-        </div>
+    <section id="container"> <!-- (3) Características do produto/serviço-->
+            <h2>RECOMENDADO PARA PESSOAS QUE:</h2>
+            <p><img src="validado3.png" width="20px" height="20"> Passam muito tempo em pé</p>
+            <p><img src="validado3.png" width="20px" height="20"> Praticam atividades de alto impacto</p>
+            <p><img src="validado3.png" width="20px" height="20"> Buscam conforto e qualidade ao pisar</p>
+            <p><img src="validado3.png" width="20px" height="20"> Sofrem de Esporão Calcâneo, Tendinite, Artrite e Artrose nos pés e joelhos</p>
+            <p><img src="validado3.png" width="20px" height="20"> Passam muito tempo andando</p>
+            <p><img src="validado3.png" width="20px" height="20"> Sofrem de Canelite e Neuroma de Morton</p>
     </section>
 
     <section id="testimonials"> <!-- (4) Depoimentos-->
