--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -10,7 +10,7 @@
 <body>
     <header> <!-- (1) Cabeçalho / Título / Menu -->
         <div class="container-v0">
-            <h1>LANÇAMENTO EXCLUSIVO: TOP COMFORT<br>ESTILO E MACIEZ</h1>
+            <h1>NOVO QUERIDINHO, TOP COMFORT SMILE...<br>MÁXIMO ESTILO E MACIEZ!</h1>
         </div>
     </header>
     <section id="home">
@@ -31,6 +31,43 @@
     <section id="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn" frameborder="0" allowfullscreen></iframe>
     </section>
+<section id="depoimentos">
+    <div class="depoimentos">
+        <h3>Cecília A</h3>
+        <p >Chinelo bom e confortável agradeço muito ao vendedor.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+    <div class="depoimentos">
+        <h3>Luiza C</h3>
+        <p>Muito macio, super recomendo, chegou muito rápido.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+    <div class="depoimentos">
+        <h3>Felipe Macena</h3>
+        <p>É minha segunda compra, comprei para o meu irmão, chinelo muitoo topp.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+    <div class="depoimentos">
+        <h3>Isabel P</h3>
+        <p>Acabou de chegar, adooorei, muito confortavel.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+    <div class="depoimentos">
+        <h3>Fernanda L</h3>
+        <p>Comprei pra mim e para os meus pais, todo mundo amou, muito bonito e confortavel.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+    <div class="depoimentos">
+        <h3>Rodrigo C</h3>
+        <p>Acabou de chegar, superou minhas expectativas.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+    <div class="depoimentos">
+        <h3>Vestido Floral</h3>
+        <p>Acabou de chegar, superou minhas expectativas.</p>
+        <img src="produto1.jpg" alt="Produto 1"> 
+    </div>
+</section>
     <section id="intro"> 
         <div class="container"> <!-- (1) Introduction of what is being offered -->
             <BR>
