--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -31,44 +31,51 @@
     <section id="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn" frameborder="0" allowfullscreen></iframe>
     </section>
-<section id="depoimentos">
-    <div class="depoimentos">
-        <h3>Cecília A</h3>
-        <p >Chinelo bom e confortável agradeço muito ao vendedor.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-    <div class="depoimentos">
-        <h3>Luiza C</h3>
-        <p>Muito macio, super recomendo, chegou muito rápido.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-    <div class="depoimentos">
-        <h3>Felipe Macena</h3>
-        <p>É minha segunda compra, comprei para o meu irmão, chinelo muitoo topp.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-    <div class="depoimentos">
-        <h3>Isabel P</h3>
-        <p>Acabou de chegar, adooorei, muito confortavel.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-    <div class="depoimentos">
-        <h3>Fernanda L</h3>
-        <p>Comprei pra mim e para os meus pais, todo mundo amou, muito bonito e confortavel.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-    <div class="depoimentos">
-        <h3>Rodrigo C</h3>
-        <p>Acabou de chegar, superou minhas expectativas.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-    <div class="depoimentos">
-        <h3>Vestido Floral</h3>
-        <p>Acabou de chegar, superou minhas expectativas.</p>
-        <img src="produto1.jpg" alt="Produto 1"> 
-    </div>
-</section>
-    <section id="intro"> 
+        <section id="depoimentos">
+            <div class="depoimentos">
+                <h3>Cecília A</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p >Chinelo bom e confortável<br> agradeço muito ao vendedor.</p>
+                <img src="dp1.png" alt="Produto 1" width="180px" height="280"px> 
+            </div>
+            <div class="depoimentos">
+                <h3>Luiza C</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p>Muito macio, super recomendo,<br> chegou muito rápido.</p>
+                <img src="dp2.png" alt="Produto 1" width="180px" height="280"px> 
+            </div>
+            <div class="depoimentos">
+                <h3>Felipe Macena</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p>É minha segunda compra,<br> comprei para o meu irmão,<br> chinelo muitoo topp.</p>
+                <img src="dp3.png" alt="Produto 1" width="180px" height="280"px> 
+            </div>
+            <div class="depoimentos">
+                <h3>Isabel P</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p>Acabou de chegar, adooorei,<br> muito confortavel.</p>
+                <img src="dp4.png" alt="Produto 1" width="180px" height="280"px> 
+            </div>
+            <div class="depoimentos">
+                <h3>Fernanda L</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p>Comprei pra mim e para os <br>meus pais, todo mundo amou, <br>muito bonito e confortavel.</p>
+                <img src="dp5.png" alt="Produto 1" width="200px" height="280px"> 
+            </div>
+            <div class="depoimentos">
+                <h3>Rodrigo C</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p>Acabou de chegar,uperou<br>superou minhas expectativas.</p>
+                <img src="dp6.png" alt="Produto 1" width="180px" height="280px"> 
+            </div>
+            <div class="depoimentos">
+                <h3>Vestido Floral</h3>
+                <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
+                <p>Parabéns comprei e adorei<br> confortavél e veio rapído.</p>
+                <img src="dp7.png" alt="Produto 1" width="200px" height="280px"> 
+            </div>
+        </section>
+        <section id="intro"> 
         <div class="container"> <!-- (1) Introduction of what is being offered -->
             <BR>
             <h2>NÃO DEIXE QUE A DOR CONTROLE SEU DIA</h2>
