--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -6,31 +6,39 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+        </style>
 </head>
 <body>
     <header> <!-- (1) Cabeçalho / Título / Menu -->
         <div class="container-v0">
-            <h1>NOVO QUERIDINHO, TOP COMFORT SMILE...<br>MÁXIMO ESTILO E MACIEZ!</h1>
+            <h1>Chinelo Ortopédico Máximo Estilo e Conforto</h1>
         </div>
     </header>
     <section id="home">
         <div class="home">
         <img src="12.png" alt="Descrição da Imagem" width="550px" height="450px">
-        </div>
+        </div><br>
         <div class="caracteristicas">
-            <h2>Chinelo Top Comfort</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Material EVA ultra leve e resistente</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Solado: antiderrapante</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Altura do solado: 5 centímetros</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Indicado para: conforto, dores, desconforto ao caminhar</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Indicado para: pessoas que passam muito tempo em pé</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Design moderno</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="validado2.png" width="20px" height="20"> Alta segurança</p>
-            <a href="#" class="btn">COMPRAR</a> 
+            <h2>Top comfort smile</h2>
+            <p><img src="validado2.png" width="13px" height="13"> Material EVA ultra leve e resistente</p>
+            <p><img src="validado2.png" width="13px" height="13"> Solado: antiderrapante</p>
+            <p><img src="validado2.png" width="13px" height="13"> Altura do solado: 5 centímetros</p>
+            <p><img src="validado2.png" width="13px" height="13"> Indicado para: conforto, dores, desconforto ao caminhar</p>
+            <p><img src="validado2.png" width="13px" height="13"> Indicado para: pessoas que passam muito tempo em pé</p>
+            <p><img src="validado2.png" width="13px" height="13""> Design moderno</p>
+            <p><img src="validado2.png" width="13px" height="13"> Alta segurança</p>
+            <a href="#" class="btn">COMPRAR</a><br>
+            <h2>Estilo e Conforto andam Juntos</h2>
+            <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn" frameborder="0" allowfullscreen></iframe><br>
+        <a href="#" class="btn">COMPRAR</a><br>
+        </div>
+    </section>
     </section>
     <section id="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/F5vo4uiY8ho?si=SRN9gJm8I15-2SKn" frameborder="0" allowfullscreen></iframe>
-    </section>
+        
         <section id="depoimentos">
             <div class="depoimentos">
                 <h3>Cecília A</h3>
