--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -102,16 +102,16 @@
             </div>
     </section>
     <section id="container"> <!-- (3) Características do produto/serviço-->
-            <h2>Compre com segurança garantida!</h2>
-            <p><img src="validado3.png" width="20px" height="20"> Entrega rápida e segura.</p>
-            <p><img src="validado3.png" width="20px" height="20"> Frete grátis para qualquer região.</p>
-            <p><img src="validado3.png" width="20px" height="20"> Mais de 40 mil pedidos entregues.</p>
-            <p><img src="validado3.png" width="20px" height="20"> Garantia de 7 dias.</p>
+            <h2 class="chamada">Compre com segurança garantida!</h2>
+            <p><img src="entrega.png" width="40px" height="40"> Entrega rápida e segura.</p>
+            <p><img src="regiaobr.png" width="40px" height="40"> Frete grátis para qualquer região.</p>
+            <p><img src="medalha.png" width="40px" height="40"> Mais de 40 mil pedidos entregues.</p>
+            <p><img src="garantia.png" width="40px" height="40"> Garantia de 7 dias.</p>
     </section>
 
     <section id="testimonials"> <!-- (4) Depoimentos-->
         <div class="container">
-            <h2>Depoimentos</h2>
+            <h2>Perguntas frequentes</h2>
             <div class="testimonial">
                 <p>"Excelente serviço, estou muito satisfeito!"</p>
                 <cite>João Silva</cite>
