--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -101,7 +101,7 @@
                 <img src="dp7.png" alt="Produto 1" width="200px" height="280px"> 
             </div>
     </section>
-    <section id="container"> <!-- (3) Características do produto/serviço-->
+    <section id="container">
             <h2 class="chamada">Compre com segurança garantida!</h2>
             <p><img src="entrega.png" width="40px" height="40"> Entrega rápida e segura.</p>
             <p><img src="regiaobr.png" width="40px" height="40"> Frete grátis para qualquer região.</p>
@@ -109,27 +109,56 @@
             <p><img src="garantia.png" width="40px" height="40"> Garantia de 7 dias.</p>
     </section>
 
-    <section id="testimonials"> <!-- (4) Depoimentos-->
+    <section id="testimonials">
         <div class="container">
             <h2>Perguntas frequentes</h2>
             <div class="testimonial">
-                <p>"Excelente serviço, estou muito satisfeito!"</p>
-                <cite>João Silva</cite>
+                <cite>Quem somos nós<br><br>
+                <p>Este site é operado pelo desbravandoweb CNPJ 12.345.678/0001-90 , somos um representante comercial com escritório em São Paulo - SP, com vendas estritamente online de diversas empresas multinacionais, com a missão de oferecer qualidade e exclusividade para os nossos clientes.</p>
             </div>
             <div class="testimonial">
-                <p>"A melhor experiência que tive até agora!"</p>
-                <cite>Maria Souza</cite>
+                <cite>Comprei meu produto, e agora?<br><br>
+                <p>Após a realização da sua compra, os próximos passos são os seguintes:<br>
+
+                    Confirmação do Pedido: Você receberá um e-mail e uma mensagem via WhatsApp confirmando que o seu pedido foi processado com sucesso.<br>
+                    
+                    Acompanhamento do Preparo: Após a confirmação do pagamento, enviaremos um novo e-mail com o código para que você possa acompanhar o preparo do seu pedido.<br>
+                    
+                    Despacho e Transporte: Quando o seu pedido for despachado, você receberá outro código de rastreamento para acompanhar o transporte até o endereço de entrega informado.</p>.
             </div>
-        </div>
+            <div class="testimonial">
+                <cite>Como faço para entrar em contato com o atendimento ao cliente?<br><br>
+                <p>Você pode entrar em contato por e-mail ou whatsapp:<br>e-mail: atendimento@desbravandoweb.com ou whatsapp: (11) 9.7665-6368</p> 
+            </div>
+            <div class="testimonial">
+                <cite>É seguro comprar no site?<br><br>
+                <p>Sim! Utilizamos criptografia SSL para proteger suas informações pessoais e de pagamento. Nossa plataforma é totalmente segura.</p> 
+            </div>
+            <div class="testimonial">
+                <cite>Como faço para comprar um produto?<br><br>
+                <p>Você pode comprar diretamente pelo nosso site ou entrar em contato com nossa equipe de vendas através do nosso<br> e-mail: atendimentos@desbravandoweb.com ou whatsapp: (11) 9.7665-6368.</p> 
+            </div>
+            <div class="testimonial">
+                <cite>Quais as formas de pagamento são aceitas?<br><br>
+                <p>Aceitamos Pix e Cartão de crédito.</p> 
+            </div>
+            <div class="testimonial">
+                <cite>Qual o prazo de entrega?<br><br>
+                <p>Todos os nossos produtos são enviados do exterior. O prazo para entrega é de 2 a 4 semanas após a compra ou 22 dias úteis a contar no dia posterior à confirmação de pagamento.</p> 
+            </div>
+            <div class="testimonial">
+                <cite>Posso acompanhar a entrega do meu pedido?<br><br>
+                <p>Sim! Após o envio, você receberá um código de rastreamento para acompanhar o status da entrega diretamente no site dos Correios ou da transportadora responsável.</p> 
+            </div>
+            <div class="testimonial">
+                <cite>Posso devolver ou trocar um produto?<br><br>
+                <p>Sim! Se você não estiver satisfeito com sua compra, é possível realizar trocas ou devoluções dentro do prazo estipulado de 7 dias por arrependimento ou 30 dias caso ocorra defeito de fabricação.</p> 
+                </div>
     </section>
 
-    <footer id="contact"> <!-- (5) Rodapé / Contatos -->
+    <footer id="contact">
         <div class="container">
-            <p>&copy; 2024 Minha Empresa. Todos os direitos reservados.</p>
-            <ul>
-                <li><a href="#">Termos de Serviço</a></li>
-                <li><a href="#">Política de Privacidade</a></li>
-            </ul>
+            <p>&copy; 2025 Desbravandoweb. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
