--- a/Projeto_Landing page.html
+++ b/Projeto_Landing page.html
@@ -95,7 +95,7 @@
                 <img src="dp6.png" alt="Produto 1" width="180px" height="280px"> 
             </div>
             <div class="depoimentos-ind">
-                <h3>Vestido Floral</h3>
+                <h3>Fernanda Lima</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Parabéns comprei e adorei<br> confortavél e veio rapído.</p>
                 <img src="dp7.png" alt="Produto 1" width="200px" height="280px"> 
