--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section id="home">
         <div class="home">
-        <img  class="img" src="12.png" alt="Descrição da Imagem" width="450px" height="350px">
+        <img  class="img" src="12.png" alt="Descrição da Imagem">
         </div>
         <div class="caracteristicas">
             <h2 class="head-2">TOP COMFORT SMILE</h2>
