--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p>Acabou de chegar,uperou<br>superou minhas expectativas.</p>
                 <img src="dp6.png" alt="Produto 1" width="180px" height="280px"> 
             </div>
-            <div class="depoimentos-ind">
+            <div class="texto">
                 <h3>Fernanda Lima</h3>
                 <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20"> <img src="estrela.png" width="20px" height="20">
                 <p>Parabéns comprei e adorei<br> confortavél e veio rapído.</p>
