--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
     <footer>
         <div>
-            <p>&copy; 2025 Desbravandoweb. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Navegandoweb. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
