--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h2 class="head-2">Perguntas frequentes</h2>
             <div class="FAQ">
                 <cite>Quem somos nós
-                <p>Este site é operado pelo desbravandoweb CNPJ 12.345.678/0001-90 , somos um representante comercial com escritório em São Paulo - SP, com vendas estritamente online de diversas empresas multinacionais, com a missão de oferecer qualidade e exclusividade para os nossos clientes.</p>
+                <p>Este site é operado pelo Navegandoweb CNPJ 42.646.131/0001-90 , somos um representante comercial com escritório em São Paulo - SP, com vendas estritamente online de diversas empresas multinacionais, com a missão de oferecer qualidade e exclusividade para os nossos clientes.</p>
             </div>
             <div class="FAQ">
                 <cite>Comprei meu produto, e agora?
