--- a/index.html
+++ b/index.html
@@ -114,18 +114,20 @@
             <h2 class="head-2">Perguntas frequentes</h2>
             <div class="FAQ">
                 <cite>Quem somos nós
-                <p>Este site é operado pelo Navegandoweb CNPJ 42.646.131/0001-90 , somos um representante comercial com escritório em São Paulo - SP, com vendas estritamente online de diversas empresas multinacionais, com a missão de oferecer qualidade e exclusividade para os nossos clientes.</p>
+                <p><b>Navegandoweb / CNPJ:42.646.131/0001-90</b>, atuamos com vendas online para empresas multinacionais. Nossa missão é oferecer produtos inovadores e de qualidade. Nossa visão é disponibilizar acesso a todos. Nossos valores: transparência e diligência.</p>
             </div>
             <div class="FAQ">
                 <cite>Comprei meu produto, e agora?
                 <p>Após a realização da sua compra, os próximos passos são os seguintes:<br>
-                    - Confirmação do Pedido: Você receberá um e-mail e uma mensagem via WhatsApp confirmando que o seu pedido foi processado com sucesso.<br>
-                    - Acompanhamento do Preparo: Após a confirmação do pagamento, enviaremos um novo e-mail com o código para que você possa acompanhar o preparo do seu pedido.<br>
-                    - Despacho e Transporte: Quando o seu pedido for despachado, você receberá outro código de rastreamento para acompanhar o transporte até o endereço de entrega informado.</p>
+                    - <b>Confirmação:</b> Você receberá um e-mail e uma mensagem no WhatsApp confirmando o processamento do seu pedido.<br>
+                    - <b>Preparo:</b> Após a confirmação do pagamento, enviaremos um e-mail com o código para acompanhar o preparo do seu pedido.<br>
+                    - <b>Envio:</b> Ao despachar o pedido, enviaremos um código de rastreamento para acompanhar o transporte até o endereço de entrega.<br>
+                    - <b>Entregue:</b> Após o pedido entregue, você receberá um e-mail e uma mensagem no WhatsApp confirmando a entrega do produto e a experiência de compra.
+                </p>
             </div>
             <div class="FAQ">
                 <cite>Como faço para entrar em contato com o atendimento ao cliente?
-                <p>Você pode entrar em contato por e-mail ou whatsapp:<br>e-mail: atendimento@desbravandoweb.com ou whatsapp: (11) 9.7665-6368. Atendimento: Seg à sex. 09h as 17h.</p> 
+                <p>e-mail: atendimento@desbravandoweb.com<br>whatsapp:(11) 9.7665-6368.<br> Atendimento: Seg à sex. 09h as 17h.</p> 
             </div>
             <div class="FAQ">
                 <cite>É seguro comprar no site?
@@ -133,7 +135,7 @@
             </div>
             <div class="FAQ">
                 <cite>Como faço para comprar um produto?
-                <p>Você pode comprar diretamente pelo nosso site ou entrar em contato com nossa equipe de vendas através do nosso<br> e-mail: atendimentos@desbravandoweb.com ou whatsapp: (11) 9.7665-6368.</p> 
+                <p>Você pode comprar diretamente pelo nosso site ou entrar em contato com nossa equipe de vendas:<br> e-mail: atendimentos@navegandoweb.whatsapp: (11) 9.7665-6368.</p> 
             </div>
             <div class="FAQ">
                 <cite>Quais as formas de pagamento são aceitas?
@@ -141,15 +143,15 @@
             </div>
             <div class="FAQ">
                 <cite>Qual o prazo de entrega?
-                <p>Todos os nossos produtos são enviados do exterior. O prazo para entrega é de 2 a 4 semanas após a compra ou 22 dias úteis a contar no dia posterior à confirmação de pagamento.</p> 
+                <p>15 à 30 dias.</p> 
             </div>
             <div class="FAQ">
                 <cite>Posso acompanhar a entrega do meu pedido?
-                <p>Sim! Após o envio, você receberá um código de rastreamento para acompanhar o status da entrega diretamente no site dos Correios ou da transportadora responsável.</p> 
+                <p>Sim, você receberá um código de rastreamento para acompanhar o status da entrega diretamente no site dos Correios ou da transportadora responsável.</p> 
             </div>
             <div class="FAQ">
                 <cite>Posso devolver ou trocar um produto?
-                <p>Sim! Se você não estiver satisfeito com sua compra, é possível realizar trocas ou devoluções dentro do prazo estipulado de 7 dias por arrependimento ou 30 dias caso ocorra defeito de fabricação.</p> 
+                <p>Sim, 7 dias para trocas ou devoluções, 30 dias para defeito de fabricação.</p> 
                 </div>
     </section>
     <footer>
