--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             <div class="FAQ">
                 <cite>Comprei meu produto, e agora?
                 <p>Após a realização da sua compra, os próximos passos são os seguintes:<br>
-                    - <b>Confirmação:</b> Você receberá um e-mail e uma mensagem no WhatsApp confirmando o processamento do seu pedido.<br>
-                    - <b>Preparo:</b> Após a confirmação do pagamento, enviaremos um e-mail com o código para acompanhar o preparo do seu pedido.<br>
-                    - <b>Envio:</b> Ao despachar o pedido, enviaremos um código de rastreamento para acompanhar o transporte até o endereço de entrega.<br>
-                    - <b>Entregue:</b> Após o pedido entregue, você receberá um e-mail e uma mensagem no WhatsApp confirmando a entrega do produto e a experiência de compra.
+                    - <b>Confirmação:</b><br> Você receberá um e-mail e uma mensagem no WhatsApp confirmando o processamento do seu pedido.<br>
+                    - <b>Preparo:</b><br> Após a confirmação do pagamento, enviaremos um e-mail com o código para acompanhar o preparo do seu pedido.<br>
+                    - <b>Envio:</b><br> Ao despachar o pedido, enviaremos um código de rastreamento para acompanhar o transporte até o endereço de entrega.<br>
+                    - <b>Entregue:</b><br> Após o pedido entregue, você receberá um e-mail e uma mensagem no WhatsApp confirmando a entrega do produto e a experiência de compra.
                 </p>
             </div>
             <div class="FAQ">
@@ -131,11 +131,11 @@
             </div>
             <div class="FAQ">
                 <cite>É seguro comprar no site?
-                <p>Sim! Utilizamos criptografia SSL para proteger suas informações pessoais e de pagamento. Nossa plataforma é totalmente segura.</p> 
+                <p>Sim, utilizamos criptografia SSL para proteger suas informações pessoais e de pagamento.<br> Nossa plataforma é totalmente segura.</p> 
             </div>
             <div class="FAQ">
                 <cite>Como faço para comprar um produto?
-                <p>Você pode comprar diretamente pelo nosso site ou entrar em contato com nossa equipe de vendas:<br> e-mail: atendimentos@navegandoweb.whatsapp: (11) 9.7665-6368.</p> 
+                <p>Você pode comprar pelo nosso site.<br> Ou entrar em contato com nossa equipe de vendas:<br> e-mail: atendimentos@navegandoweb.<br> whatsapp: (11) 9.7665-6368.</p> 
             </div>
             <div class="FAQ">
                 <cite>Quais as formas de pagamento são aceitas?
@@ -147,11 +147,11 @@
             </div>
             <div class="FAQ">
                 <cite>Posso acompanhar a entrega do meu pedido?
-                <p>Sim, você receberá um código de rastreamento para acompanhar o status da entrega diretamente no site dos Correios ou da transportadora responsável.</p> 
+                <p>Sim, você receberá um código de rastreamento da entrega.</p> 
             </div>
             <div class="FAQ">
                 <cite>Posso devolver ou trocar um produto?
-                <p>Sim, 7 dias para trocas ou devoluções, 30 dias para defeito de fabricação.</p> 
+                <p>Sim, 7 dias para troca ou devolução, 30 dias para defeito de fabricação.</p> 
                 </div>
     </section>
     <footer>
