--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
             <h2 class="head-2">Perguntas frequentes</h2>
             <div class="FAQ">
                 <cite>Quem somos nós
-                <p><b>Navegandoweb / CNPJ:42.646.131/0001-90</b>, atuamos com vendas online para empresas multinacionais. Nossa missão é oferecer produtos inovadores e de qualidade. Nossa visão é disponibilizar acesso a todos. Nossos valores: transparência e diligência.</p>
+                <p>Navegandoweb CNPJ:42.646.131/0001-90<br> Nossa missão: Oferecer produtos inovadores e de qualidade.<br> Nossa visão: Disponibilizar acesso a todos. Nossos valores: Diligência e transparência.</p>
             </div>
             <div class="FAQ">
                 <cite>Comprei meu produto, e agora?
                 <p>Após a realização da sua compra, os próximos passos são os seguintes:<br>
-                    - <b>Confirmação:</b><br> Você receberá um e-mail e uma mensagem no WhatsApp confirmando o processamento do seu pedido.<br>
-                    - <b>Preparo:</b><br> Após a confirmação do pagamento, enviaremos um e-mail com o código para acompanhar o preparo do seu pedido.<br>
-                    - <b>Envio:</b><br> Ao despachar o pedido, enviaremos um código de rastreamento para acompanhar o transporte até o endereço de entrega.<br>
-                    - <b>Entregue:</b><br> Após o pedido entregue, você receberá um e-mail e uma mensagem no WhatsApp confirmando a entrega do produto e a experiência de compra.
+                    Confirmação:<br> Você receberá um e-mail e uma mensagem no WhatsApp confirmando o processamento do seu pedido.<br>
+                    Preparo:<br> Após a confirmação do pagamento, enviaremos um e-mail com o código para acompanhar o preparo do seu pedido.<br>
+                    Envio:<br> Ao despachar o pedido, enviaremos um código de rastreamento para acompanhar o transporte até o endereço de entrega.<br>
+                    Entregue:<br> Após o pedido entregue, você receberá um e-mail e uma mensagem no WhatsApp confirmando a entrega do produto e a experiência de compra.
                 </p>
             </div>
             <div class="FAQ">
