--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h2 class="head-2">Perguntas frequentes</h2>
             <div class="FAQ">
                 <cite>Quem somos nós
-                <p>Navegandoweb CNPJ:42.646.131/0001-90<br> Nossa missão: Oferecer produtos inovadores e de qualidade.<br> Nossa visão: Disponibilizar acesso a todos. Nossos valores: Diligência e transparência.</p>
+                <p>Navegandoweb CNPJ:42.646.131/0001-90<br> Nossa missão: Oferecer produtos inovadores e de qualidade.<br> Nossa visão: Disponibilizar acesso a todos.<br> Nossos valores: Diligência e transparência.</p>
             </div>
             <div class="FAQ">
                 <cite>Comprei meu produto, e agora?
