--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <div class="produto">
         <img src="12.png" alt="Produto" class="produto-img">
         <div class="descricao-pro">
-          <h2 class="nome-produto">Produto Incrível</h2>
-          <p class="descricao-produto">Esse é um produto incrível com características excepcionais!</p>
+          <h2 class="nome-produto">Chinelo Top Comfort Smile</h2>
+          <p class="descricao-produto">Preço pomocional, garanta o seu, últimas unidades!</p>
           <div class="precos">
-            <span class="preco-antigo">R$ 199,99</span>
-            <span class="preco-atual">R$ 149,99</span>
+            <span class="preco-antigo">R$ 299,99</span>
+            <span class="preco-atual">R$ 176,64</span>
           </div>
-          <button class="comprar-btn">Comprar Agora</button>
+          <button class="btn">Comprar Agora</button>
         </div>
       </div>
         <section id="section-depoimentos">
