--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <img src="12.png" alt="Produto" class="produto-img">
         <div class="descricao-pro">
           <h2 class="nome-produto">Chinelo Top Comfort Smile</h2>
-          <p class="descricao-produto">Preço pomocional, garanta o seu, últimas unidades!</p>
+          <p class="descricao-produto">Preço promocional, garanta o seu, últimas unidades!</p>
           <div class="precos">
-            <span class="preco-antigo">R$ 299,99</span>
+            <span class="preco-antigo">R$ 299,99</span><br>
             <span class="preco-atual">R$ 167,64</span>
           </div>
-          <button class="btn">Comprar Agora</button>
+          <button class="btn">Comprar agora</button>
         </div>
       </div>
         <section id="section-depoimentos">
