--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <span class="preco-antigo">R$ 299,99</span><br>
             <span class="preco-atual">R$ 167,64</span>
           </div>
-          <a href="https://navegandoweb.com/produto/chinelo-ortopedico-top-comfort-smile/" target="_self" class="btn">Comprar agora</a>
+          <a href="https://navegandoweb.com/produto/chinelo-ortopedico-top-comfort-smile/" target="_self" class="btn">COMPRAR AGORA</a>
         </div>
       </div>
         <section id="section-depoimentos">
